--- a/index.html
+++ b/index.html
@@ -108,30 +108,35 @@ layout: default
     <div class="container">
 	<h1 class="h1_agenda">Agenda</h1>
 	<div class="row">
-	    <h3 class="h3_agenda">Décembre 2018</h3>
+	    <h3 class="h3_agenda">Agenda</h3>
+	    <h3 class="h3_agenda">Pre YOG Events</h3>
 	    <ul>
-		<li>14 au 16.12.2018</li>
-		<ul>
-	    	    <li>FIS Ski Jumping WC Ladies</li>
-		    <li>Les Tuffes</li>
-		    <div title="Add to Calendar" class="addeventatc calendrier">
-		    	Add to Calendar
-		    	<span class="start">11/29/2018 08:00 AM</span>
-		    	<span class="end">11/29/2018 10:00 AM</span>
-		    	<span class="timezone">America/Los_Angeles</span>
-		    	<span class="title">Summary of the event</span>
-		    	<span class="description">Description of the event</span>
-		    	<span class="location">Location of the event</span>
-		    </div>
-		</ul>
-		<li>19 au 23.12.2018</li>
-	    	<ul>
-	    	    <li>IBU Biathlon Junior Cup</li>
-		    <li>Les Tuffes</li>
-		</ul>
+		<li>19-23.12.2018 : IBU Biathlon Junior Cup, Les Tuffes</li>
+		<div title="Add to Calendar" class="addeventatc calendrier">
+		    Add to Calendar
+		    <span class="start">12/19/2018 08:00 AM</span>
+		    <span class="end">12/23/2018 20:00 AM</span>
+		    <span class="title">IBU Biathlon Junior Cup</span>
+		    <span class="location">Les Tuffes</span>
+	    	</div>
+		<li>08-13.01.2019 : FIL Luge ITW, St-Moritz</li>
+		<br>
+		<li>11-13.01.2019 : Audi Skicross Tour & FIS Europa Cup, Villars</li>
+		<br>
+		<li>14-19.01.2019 : FIL Luge Junior World Cup, St-Moritz</li>
+		<br>
+		<li>19-20.01.2019 : Speed Skating Swiss Championships, St-Moritz</li>
+		<br>
+		<li>19-20.01.2019 : Slopestyle Swiss-ski Freestyle Ski Tour & Audi Snowboard Tour, Leysin</li>
+		<br>
+		<li>26.01.2019 : Journée officielle Pre YOG Event, Leysin</li>
+		<br>
+		<li>21-27.01.2019 : IBSF World Cup, St-Moritz</li>
+		<br>
+		<li>28-29.01.2019 : Alpine Skiing FIS Europa Cup (SG/SC), Les Diablerets</li>
 	    </ul>
 	    <hr>
-	    <h3 class="h3_agenda">Janvier 2019</h3>
+	    <h3 class="h3_agenda"></h3>
 	    <ul>
 		<li>08.01.2019 :</li>
 		<ul>
@@ -143,53 +148,7 @@ layout: default
 		    <li>One Year to Go, Quartier du Flon (Esplanade du Flon, Lausanne), 16h00-22h30</li>
 		</ul>
 		<br>
-		<li>08 au 13.01.2019</li>
-	    	<ul>
-		    <li>FIL Luge ITW</li>
-		    <li>St-Moritz</li>
-		</ul>
-		<br>
-		<li>11 au 13.01.2019</li>
-	    	<ul>
-		    <li>Audi Skicross Tour & FIS Europa Cup</li>
-		    <li>Villars</li>
-		</ul>
-		<br>
-		<li>14 au 19.01.2019</li>
-	    	<ul>
-		    <li>FIL Luge Junior World Cup</li>
-		    <li>St-Moritz</li>
-		</ul>
-		<br>
-		<li>19 au 20.01.2019</li>
-	    	<ul>
-		    <li>Speed Skating Swiss Championships</li>
-		    <li>St-Moritz</li>
-		</ul>
-		<br>
-		<li>19 au 20.01.2019</li>
-	    	<ul>
-		    <li>Slopestyle Swiss-ski Freestyle Ski Tour & Audi Snowboard Tour</li>
-		    <li>Leysin</li>
-		</ul>
-		<br>
-		<li>26/01/2019</li>
-	    	<ul>
-		    <li>Journée officielle Pre YOG Event</li>
-		    <li>Leysin</li>
-		</ul>
-		<br>
-		<li>21 au 27.01.2019</li>
-	    	<ul>
-		    <li>IBSF World Cup</li>
-		    <li>St-Moritz</li>
-		</ul>
-		<br>
-		<li>28 au 29.01.2019</li>
-	    	<ul>
-		    <li>Alpine Skiing FIS Europa Cup (SG/SC)</li>
-		    <li>Les Diablerets</li>
-		</ul>
+		
 	    </ul>
 	</div>
     </div>
