--- a/index.html
+++ b/index.html
@@ -119,36 +119,87 @@ layout: default
 		    <span class="title">IBU Biathlon Junior Cup</span>
 		    <span class="location">Les Tuffes</span>
 	    	</div>
+		<br>
 		<li>08-13.01.2019 : FIL Luge ITW, St-Moritz</li>
+		<div title="Add to Calendar" class="addeventatc calendrier">
+		    Add to Calendar
+		    <span class="start">01/08/2019 08:00 AM</span>
+		    <span class="end">01/13/2019 20:00 AM</span>
+		    <span class="title">FIL Luge ITW</span>
+		    <span class="location">St-Moritz</span>
+	    	</div>
 		<br>
 		<li>11-13.01.2019 : Audi Skicross Tour & FIS Europa Cup, Villars</li>
+		<div title="Add to Calendar" class="addeventatc calendrier">
+		    Add to Calendar
+		    <span class="start">01/11/2019 08:00 AM</span>
+		    <span class="end">01/13/2019 20:00 AM</span>
+		    <span class="title">Audi Skicross Tour & FIS Europa Cup</span>
+		    <span class="location">Villars</span>
+	    	</div>
 		<br>
 		<li>14-19.01.2019 : FIL Luge Junior World Cup, St-Moritz</li>
+		<div title="Add to Calendar" class="addeventatc calendrier">
+		    Add to Calendar
+		    <span class="start">01/14/2019 08:00 AM</span>
+		    <span class="end">01/19/2019 20:00 AM</span>
+		    <span class="title">FIL Luge Junior World Cup</span>
+		    <span class="location">St-Moritz</span>
+	    	</div>
 		<br>
 		<li>19-20.01.2019 : Speed Skating Swiss Championships, St-Moritz</li>
+		<div title="Add to Calendar" class="addeventatc calendrier">
+		    Add to Calendar
+		    <span class="start">01/19/2019 08:00 AM</span>
+		    <span class="end">01/20/2019 20:00 AM</span>
+		    <span class="title">Speed Skating Swiss Championships</span>
+		    <span class="location">St-Moritz</span>
+	    	</div>
 		<br>
 		<li>19-20.01.2019 : Slopestyle Swiss-ski Freestyle Ski Tour & Audi Snowboard Tour, Leysin</li>
+		<div title="Add to Calendar" class="addeventatc calendrier">
+		    Add to Calendar
+		    <span class="start">01/19/2019 08:00 AM</span>
+		    <span class="end">01/20/2019 20:00 AM</span>
+		    <span class="title">Slopestyle Swiss-ski Freestyle Ski Tour & Audi Snowboard Tour</span>
+		    <span class="location">Leysin</span>
+	    	</div>
 		<br>
 		<li>26.01.2019 : Journée officielle Pre YOG Event, Leysin</li>
+		<div title="Add to Calendar" class="addeventatc calendrier">
+		    Add to Calendar
+		    <span class="start">01/26/2019 08:00 AM</span>
+		    <span class="end">01/26/2019 20:00 AM</span>
+		    <span class="title">Journée officielle Pre YOG Event</span>
+		    <span class="location">Leysin</span>
+	    	</div>
 		<br>
 		<li>21-27.01.2019 : IBSF World Cup, St-Moritz</li>
+		<div title="Add to Calendar" class="addeventatc calendrier">
+		    Add to Calendar
+		    <span class="start">01/21/2019 08:00 AM</span>
+		    <span class="end">01/27/2019 20:00 AM</span>
+		    <span class="title">IBSF World Cup</span>
+		    <span class="location">St-Moritz</span>
+	    	</div>
 		<br>
 		<li>28-29.01.2019 : Alpine Skiing FIS Europa Cup (SG/SC), Les Diablerets</li>
+		<div title="Add to Calendar" class="addeventatc calendrier">
+		    Add to Calendar
+		    <span class="start">01/28/2019 08:00 AM</span>
+		    <span class="end">01/29/2019 20:00 AM</span>
+		    <span class="title">Alpine Skiing FIS Europa Cup (SG/SC)</span>
+		    <span class="location">Les Diablerets</span>
+	    	</div>
+		<br>
 	    </ul>
 	    <hr>
-	    <h3 class="h3_agenda"></h3>
+	    <h3 class="h3_agenda">Lausanne 2020 Events</h3>
 	    <ul>
-		<li>08.01.2019 :</li>
-		<ul>
-		    <li>Lancement officiel de la mascotte L2020, Patinoire de Malley (LHC-HC Davos), 19h00-22h30</li>
-		</ul>
+		<li>08.01.2019 : Lancement officiel de la mascotte L2020, Patinoire de Malley (LHC-HC Davos), 19h00-22h30</li>
 		<br>
-		<li>09.01.2019 : </li>
-		<ul>
-		    <li>One Year to Go, Quartier du Flon (Esplanade du Flon, Lausanne), 16h00-22h30</li>
-		</ul>
+		<li>09.01.2019 : One Year to Go, Quartier du Flon (Esplanade du Flon, Lausanne), 16h00-22h30</li>
 		<br>
-		
 	    </ul>
 	</div>
     </div>
