--- a/index.html
+++ b/index.html
@@ -108,7 +108,6 @@ layout: default
     <div class="container">
 	<h1 class="h1_agenda">Agenda</h1>
 	<div class="row">
-	    <h3 class="h3_agenda">Agenda</h3>
 	    <h3 class="h3_agenda">Pre YOG Events</h3>
 	    <ul>
 		<li>19-23.12.2018 : IBU Biathlon Junior Cup, Les Tuffes</li>
@@ -197,8 +196,22 @@ layout: default
 	    <h3 class="h3_agenda">Lausanne 2020 Events</h3>
 	    <ul>
 		<li>08.01.2019 : Lancement officiel de la mascotte L2020, Patinoire de Malley (LHC-HC Davos), 19h00-22h30</li>
+		<div title="Add to Calendar" class="addeventatc calendrier">
+		    Add to Calendar
+		    <span class="start">01/08/2019 19:00 AM</span>
+		    <span class="end">01/08/2019 22:30 AM</span>
+		    <span class="title">Lancement officiel de la mascotte L2020</span>
+		    <span class="location">Patinoire de Malley</span>
+	    	</div>
 		<br>
 		<li>09.01.2019 : One Year to Go, Quartier du Flon (Esplanade du Flon, Lausanne), 16h00-22h30</li>
+		<div title="Add to Calendar" class="addeventatc calendrier">
+		    Add to Calendar
+		    <span class="start">01/09/2019 16:00 AM</span>
+		    <span class="end">01/09/2019 22:30 AM</span>
+		    <span class="title">One Year to Go</span>
+		    <span class="location">Esplanade du Flon, Lausanne</span>
+	    	</div>
 		<br>
 	    </ul>
 	</div>
