--- a/medias.html
+++ b/medias.html
@@ -72,6 +72,7 @@ layout: default
       <h2>Newsletter</h2>
       <div class="newsl">
         {% if site.lang == "fr-fr" %}
+          <a href="https://mailchi.mp/lausanne2020.com/newsletter-decembre-2-2018" target="_blank" rel="noopener"> Décembre 2018 </a><br>
           <a href="https://mailchi.mp/lausanne2020.com/newsletter-decembre-2018" target="_blank" rel="noopener"> Décembre 2018 </a><br>
           <a href="https://mailchi.mp/lausanne2020.com/newsletter-octobre-2018" target="_blank" rel="noopener"> Octobre 2018 </a><br>
           <a href="https://mailchi.mp/lausanne2020.com/newsletter-septembre-2018" target="_blank" rel="noopener"> Septembre 2018 </a><br>
@@ -85,6 +86,7 @@ layout: default
           <a href="https://mailchi.mp/d1078c26c261/lausanne-2020-newsletter-8-juin-2017" target="_blank" rel="noopener"> Juin 2017 </a><br>
         {% endif %}
         {% if site.lang == "de-de" %}
+          <a href="https://mailchi.mp/lausanne2020/newsletter-dezember-2-2018" target="_blank" rel="noopener"> Dezember 2018 </a><br>
           <a href="https://mailchi.mp/lausanne2020/newsletter-dezember-2018" target="_blank" rel="noopener"> Dezember 2018 </a><br>
           <a href="https://mailchi.mp/lausanne2020/newsletter-oktober-2018-de" target="_blank" rel="noopener"> Oktober 2018 </a><br>
           <a href="https://mailchi.mp/lausanne2020/newsletter-september-de" target="_blank" rel="noopener"> September 2018 </a><br>
@@ -97,6 +99,7 @@ layout: default
           <a href="https://mailchi.mp/1b14eb75cf7e/lausanne-2020-newsletter-8-juni-2017" target="_blank" rel="noopener"> Juni 2017 </a><br>
         {% endif %}
         {% if site.lang == "en-gb" %}
+          <a href="https://mailchi.mp/lausanne2020.com/newsletter-december-2-2018" target="_blank" rel="noopener"> December 2018 </a><br>
           <a href="https://mailchi.mp/lausanne2020.com/newsletter-december-2018" target="_blank" rel="noopener"> December 2018 </a><br>
           <a href="https://mailchi.mp/lausanne2020.com/newsletter-october-2018-en" target="_blank" rel="noopener"> October 2018 </a><br>
           <a href="https://mailchi.mp/lausanne2020.com/newsletter-september-en" target="_blank" rel="noopener"> September 2018 </a><br>
