--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: default
 <div class="hero">
     <div class="container">
     {% for post in document.fragments.claims_list.group_documents %}
-        <h1 class="the_claim">{{post.fragments.claim.text}}<br/><span style="color: #ffffff;">{{post.fragments.claim_part_2.text}}</span></h1>
+        <!--<h1 class="the_claim">{{post.fragments.claim.text}}<br/><span style="color: #ffffff;">{{post.fragments.claim_part_2.text}}</span></h1>-->
     {% endfor %}
     </div>
 </div>
