--- a/medias.html
+++ b/medias.html
@@ -26,6 +26,7 @@ layout: default
       {% endif %}
       <div class="prelease">
         {% if site.lang == "fr-fr" %}
+          <a href="/images/home/2019-01-04-FAIVRE-FR.pdf" target="_blank" rel="noopener">04.01.2019 : Virginie Faivre nommée Présidente du comité d’organisation de Lausanne 2020</a><br>
           <a href="/images/home/2018-11-26-HEMU-L2020-FR.pdf" target="_blank" rel="noopener">26.11.2018 : L’HEMU et Lausanne 2020 lancent un concours de création musicale</a><br>
           <a href="/images/home/20181014_Communiqué_de_presse_PB.pdf" target="_blank" rel="noopener">14.10.2018 : Décès de Patrick Baumann, Président du Comité d’organisation de Lausanne 2020</a><br>
           <a href="/images/home/Lausanne2020_CP_03.10.2018.pdf" target="_blank" rel="noopener">03.10.2018 : Trois ambassadeurs et de nouveaux partenaires pour Lausanne 2020</a><br>
@@ -34,16 +35,18 @@ layout: default
           <a href="/images/home/Lausanne2020_Pressrelease_131stIOCSession_Lima_2017-13-09_FR.pdf" target="_blank" rel="noopener">13.09.2017 : Lausanne 2020 - "Nos promesses deviennent réalité"</a><br>
         {% endif %}
         {% if site.lang == "de-de" %}
+          <a href="/images/home/2019-01-04-FAIVRE-DE.pdf" target="_blank" rel="noopener">04.01.2019 : Virginie Faivre neue Präsidentin des Organisationskomitees Lausanne 2020</a><br>
           <a href="/images/home/2018-11-26-HEMU-L2020-AL.pdf" target="_blank" rel="noopener">26.11.2018 : Die Musikhochschule und Lausanne 2020 lancieren einen Musikwettbewerb</a><br>
           <a href="/images/home/Lausanne2020_MM_15.08.2018.pdf" target="_blank" rel="noopener">15.08.2018 : Host-Standorte sehr zuversichtlich 17 Monate vor den Spielen</a><br>
           <a href="/images/home/Lausanne2020.CP.09.04.2018._ALL.pdf" target="_blank" rel="noopener">09.04.2018 : Lausanne 2020 liegt dem Zeitplan voraus</a><br>
         {% endif %}
         {% if site.lang == "en-gb" %}
-          <a href="/images/home/2018-11-26-HEMU-L2020-ENG.pdf" target="_blank" rel="noopener">26.11.2018 : Lausanne’s University of Music and Lausanne 2020 launch musical creation contest</a><br>
-          <a href="/images/home/20181014_Press_release_PB.pdf" target="_blank" rel="noopener">14.10.2018 : Death of Patrick Baumann, President of the Lausanne 2020 Organising Committee</a><br>
-          <a href="/images/home/Lausanne2020_CP_03.10.2018_EN.pdf" target="_blank" rel="noopener">03.10.2018 : Three ambassadors and a host of new partners for Lausanne 2020</a><br>
-          <a href="/images/home/Lausanne2020_PR_15.08.2018.pdf" target="_blank" rel="noopener">15.08.2018 : Preparation Events to Take Place This Winter in Most Competition Sites</a><br>
-          <a href="/images/home/Lausanne2020_Pressrelease_131stIOCSession_Lima_2017-13-09_ENG.pdf" target="_blank" rel="noopener">13.09.2017 : Lausanne 2020 - "Our promise becomes reality"</a><br>
+          <a href="/images/home/2019-01-04-FAIVRE-EN.pdf" target="_blank" rel="noopener">01/04/2019 : Freestyle skiing star Virginie Faivre appointed President of the Lausanne 2020 Organising Committee</a><br>
+          <a href="/images/home/2018-11-26-HEMU-L2020-ENG.pdf" target="_blank" rel="noopener">11/26/2018 : Lausanne’s University of Music and Lausanne 2020 launch musical creation contest</a><br>
+          <a href="/images/home/20181014_Press_release_PB.pdf" target="_blank" rel="noopener">10/14/2018 : Death of Patrick Baumann, President of the Lausanne 2020 Organising Committee</a><br>
+          <a href="/images/home/Lausanne2020_CP_03.10.2018_EN.pdf" target="_blank" rel="noopener">10/03/2018 : Three ambassadors and a host of new partners for Lausanne 2020</a><br>
+          <a href="/images/home/Lausanne2020_PR_15.08.2018.pdf" target="_blank" rel="noopener">08/15/2018 : Preparation Events to Take Place This Winter in Most Competition Sites</a><br>
+          <a href="/images/home/Lausanne2020_Pressrelease_131stIOCSession_Lima_2017-13-09_ENG.pdf" target="_blank" rel="noopener">09/13/2017 : Lausanne 2020 - "Our promise becomes reality"</a><br>
         {% endif %}
       </div>
       {% if site.lang == "fr-fr" %}
