--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ layout: default
 	<div class="row">
 	    <h3 class="h3_agenda">Pre YOG Events</h3>
 	    <ul>
-		<li>19-23.12.2018 : IBU Biathlon Junior Cup, Les Tuffes</li>
+		<li>19-23.12.2018 : IBU Biathlon Junior Cup, Les Tuffes 
 		<div title="Add to Calendar" class="addeventatc calendrier">
 		    Add to Calendar
 		    <span class="start">12/19/2018 08:00 AM</span>
@@ -118,8 +118,9 @@ layout: default
 		    <span class="title">IBU Biathlon Junior Cup</span>
 		    <span class="location">Les Tuffes</span>
 	    	</div>
+		</li>
 		<br>
-		<li>08-13.01.2019 : FIL Luge ITW, St-Moritz</li>
+		<li>08-13.01.2019 : FIL Luge ITW, St-Moritz 
 		<div title="Add to Calendar" class="addeventatc calendrier">
 		    Add to Calendar
 		    <span class="start">01/08/2019 08:00 AM</span>
@@ -127,8 +128,9 @@ layout: default
 		    <span class="title">FIL Luge ITW</span>
 		    <span class="location">St-Moritz</span>
 	    	</div>
+		</li>
 		<br>
-		<li>11-13.01.2019 : Audi Skicross Tour & FIS Europa Cup, Villars</li>
+		<li>11-13.01.2019 : Audi Skicross Tour & FIS Europa Cup, Villars 
 		<div title="Add to Calendar" class="addeventatc calendrier">
 		    Add to Calendar
 		    <span class="start">01/11/2019 08:00 AM</span>
@@ -136,8 +138,9 @@ layout: default
 		    <span class="title">Audi Skicross Tour & FIS Europa Cup</span>
 		    <span class="location">Villars</span>
 	    	</div>
+		</li>
 		<br>
-		<li>14-19.01.2019 : FIL Luge Junior World Cup, St-Moritz</li>
+		<li>14-19.01.2019 : FIL Luge Junior World Cup, St-Moritz 
 		<div title="Add to Calendar" class="addeventatc calendrier">
 		    Add to Calendar
 		    <span class="start">01/14/2019 08:00 AM</span>
@@ -145,8 +148,9 @@ layout: default
 		    <span class="title">FIL Luge Junior World Cup</span>
 		    <span class="location">St-Moritz</span>
 	    	</div>
+		</li>
 		<br>
-		<li>19-20.01.2019 : Speed Skating Swiss Championships, St-Moritz</li>
+		<li>19-20.01.2019 : Speed Skating Swiss Championships, St-Moritz 
 		<div title="Add to Calendar" class="addeventatc calendrier">
 		    Add to Calendar
 		    <span class="start">01/19/2019 08:00 AM</span>
@@ -154,8 +158,9 @@ layout: default
 		    <span class="title">Speed Skating Swiss Championships</span>
 		    <span class="location">St-Moritz</span>
 	    	</div>
+		</li>
 		<br>
-		<li>19-20.01.2019 : Slopestyle Swiss-ski Freestyle Ski Tour & Audi Snowboard Tour, Leysin</li>
+		<li>19-20.01.2019 : Slopestyle Swiss-ski Freestyle Ski Tour & Audi Snowboard Tour, Leysin 
 		<div title="Add to Calendar" class="addeventatc calendrier">
 		    Add to Calendar
 		    <span class="start">01/19/2019 08:00 AM</span>
@@ -163,8 +168,9 @@ layout: default
 		    <span class="title">Slopestyle Swiss-ski Freestyle Ski Tour & Audi Snowboard Tour</span>
 		    <span class="location">Leysin</span>
 	    	</div>
+		</li>
 		<br>
-		<li>26.01.2019 : Journée officielle Pre YOG Event, Leysin</li>
+		<li>26.01.2019 : Journée officielle Pre YOG Event, Leysin 
 		<div title="Add to Calendar" class="addeventatc calendrier">
 		    Add to Calendar
 		    <span class="start">01/26/2019 08:00 AM</span>
@@ -172,8 +178,9 @@ layout: default
 		    <span class="title">Journée officielle Pre YOG Event</span>
 		    <span class="location">Leysin</span>
 	    	</div>
+		</li>
 		<br>
-		<li>21-27.01.2019 : IBSF World Cup, St-Moritz</li>
+		<li>21-27.01.2019 : IBSF World Cup, St-Moritz 
 		<div title="Add to Calendar" class="addeventatc calendrier">
 		    Add to Calendar
 		    <span class="start">01/21/2019 08:00 AM</span>
@@ -181,8 +188,9 @@ layout: default
 		    <span class="title">IBSF World Cup</span>
 		    <span class="location">St-Moritz</span>
 	    	</div>
+		</li>
 		<br>
-		<li>28-29.01.2019 : Alpine Skiing FIS Europa Cup (SG/SC), Les Diablerets</li>
+		<li>28-29.01.2019 : Alpine Skiing FIS Europa Cup (SG/SC), Les Diablerets 
 		<div title="Add to Calendar" class="addeventatc calendrier">
 		    Add to Calendar
 		    <span class="start">01/28/2019 08:00 AM</span>
@@ -190,12 +198,13 @@ layout: default
 		    <span class="title">Alpine Skiing FIS Europa Cup (SG/SC)</span>
 		    <span class="location">Les Diablerets</span>
 	    	</div>
+		</li>
 		<br>
 	    </ul>
 	    <hr>
 	    <h3 class="h3_agenda">Lausanne 2020 Events</h3>
 	    <ul>
-		<li>08.01.2019 : Lancement officiel de la mascotte L2020, Patinoire de Malley (LHC-HC Davos), 19h00-22h30</li>
+		<li>08.01.2019 : Lancement officiel de la mascotte L2020, Patinoire de Malley (LHC-HC Davos), 19h00-22h30 
 		<div title="Add to Calendar" class="addeventatc calendrier">
 		    Add to Calendar
 		    <span class="start">01/08/2019 19:00 AM</span>
@@ -203,8 +212,9 @@ layout: default
 		    <span class="title">Lancement officiel de la mascotte L2020</span>
 		    <span class="location">Patinoire de Malley</span>
 	    	</div>
+		</li>
 		<br>
-		<li>09.01.2019 : One Year to Go, Quartier du Flon (Esplanade du Flon, Lausanne), 16h00-22h30</li>
+		<li>09.01.2019 : One Year to Go, Quartier du Flon (Esplanade du Flon, Lausanne), 16h00-22h30 
 		<div title="Add to Calendar" class="addeventatc calendrier">
 		    Add to Calendar
 		    <span class="start">01/09/2019 16:00 AM</span>
@@ -212,6 +222,7 @@ layout: default
 		    <span class="title">One Year to Go</span>
 		    <span class="location">Esplanade du Flon, Lausanne</span>
 	    	</div>
+		</li>
 		<br>
 	    </ul>
 	</div>
