--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ layout: default
 	    <h3 class="h3_agenda">Pre YOG Events</h3>
 	    <ul>
 		<li>19-23.12.2018 : IBU Biathlon Junior Cup, Les Tuffes 
-		<div title="Add to Calendar" class="addeventatc calendrier">
+		<div class="addeventatc calendrier">
 		    Add to Calendar
 		    <span class="start">12/19/2018 08:00 AM</span>
 		    <span class="end">12/23/2018 20:00 AM</span>
@@ -121,7 +121,7 @@ layout: default
 		</li>
 		<br>
 		<li>08-13.01.2019 : FIL Luge ITW, St-Moritz 
-		<div title="Add to Calendar" class="addeventatc calendrier">
+		<div class="addeventatc calendrier">
 		    Add to Calendar
 		    <span class="start">01/08/2019 08:00 AM</span>
 		    <span class="end">01/13/2019 20:00 AM</span>
@@ -131,7 +131,7 @@ layout: default
 		</li>
 		<br>
 		<li>11-13.01.2019 : Audi Skicross Tour & FIS Europa Cup, Villars 
-		<div title="Add to Calendar" class="addeventatc calendrier">
+		<div class="addeventatc calendrier">
 		    Add to Calendar
 		    <span class="start">01/11/2019 08:00 AM</span>
 		    <span class="end">01/13/2019 20:00 AM</span>
@@ -141,7 +141,7 @@ layout: default
 		</li>
 		<br>
 		<li>14-19.01.2019 : FIL Luge Junior World Cup, St-Moritz 
-		<div title="Add to Calendar" class="addeventatc calendrier">
+		<div class="addeventatc calendrier">
 		    Add to Calendar
 		    <span class="start">01/14/2019 08:00 AM</span>
 		    <span class="end">01/19/2019 20:00 AM</span>
@@ -151,7 +151,7 @@ layout: default
 		</li>
 		<br>
 		<li>19-20.01.2019 : Speed Skating Swiss Championships, St-Moritz 
-		<div title="Add to Calendar" class="addeventatc calendrier">
+		<div class="addeventatc calendrier">
 		    Add to Calendar
 		    <span class="start">01/19/2019 08:00 AM</span>
 		    <span class="end">01/20/2019 20:00 AM</span>
@@ -161,7 +161,7 @@ layout: default
 		</li>
 		<br>
 		<li>19-20.01.2019 : Slopestyle Swiss-ski Freestyle Ski Tour & Audi Snowboard Tour, Leysin 
-		<div title="Add to Calendar" class="addeventatc calendrier">
+		<div class="addeventatc calendrier">
 		    Add to Calendar
 		    <span class="start">01/19/2019 08:00 AM</span>
 		    <span class="end">01/20/2019 20:00 AM</span>
@@ -171,7 +171,7 @@ layout: default
 		</li>
 		<br>
 		<li>26.01.2019 : Journée officielle Pre YOG Event, Leysin 
-		<div title="Add to Calendar" class="addeventatc calendrier">
+		<div class="addeventatc calendrier">
 		    Add to Calendar
 		    <span class="start">01/26/2019 08:00 AM</span>
 		    <span class="end">01/26/2019 20:00 AM</span>
@@ -181,7 +181,7 @@ layout: default
 		</li>
 		<br>
 		<li>21-27.01.2019 : IBSF World Cup, St-Moritz 
-		<div title="Add to Calendar" class="addeventatc calendrier">
+		<div class="addeventatc calendrier">
 		    Add to Calendar
 		    <span class="start">01/21/2019 08:00 AM</span>
 		    <span class="end">01/27/2019 20:00 AM</span>
@@ -191,7 +191,7 @@ layout: default
 		</li>
 		<br>
 		<li>28-29.01.2019 : Alpine Skiing FIS Europa Cup (SG/SC), Les Diablerets 
-		<div title="Add to Calendar" class="addeventatc calendrier">
+		<div class="addeventatc calendrier">
 		    Add to Calendar
 		    <span class="start">01/28/2019 08:00 AM</span>
 		    <span class="end">01/29/2019 20:00 AM</span>
@@ -205,7 +205,7 @@ layout: default
 	    <h3 class="h3_agenda">Lausanne 2020 Events</h3>
 	    <ul>
 		<li>08.01.2019 : Lancement officiel de la mascotte L2020, Patinoire de Malley (LHC-HC Davos), 19h00-22h30 
-		<div title="Add to Calendar" class="addeventatc calendrier">
+		<div class="addeventatc calendrier">
 		    Add to Calendar
 		    <span class="start">01/08/2019 19:00 AM</span>
 		    <span class="end">01/08/2019 22:30 AM</span>
@@ -215,7 +215,7 @@ layout: default
 		</li>
 		<br>
 		<li>09.01.2019 : One Year to Go, Quartier du Flon (Esplanade du Flon, Lausanne), 16h00-22h30 
-		<div title="Add to Calendar" class="addeventatc calendrier">
+		<div class="addeventatc calendrier">
 		    Add to Calendar
 		    <span class="start">01/09/2019 16:00 AM</span>
 		    <span class="end">01/09/2019 22:30 AM</span>
