--- a/index.html
+++ b/index.html
@@ -111,8 +111,7 @@ layout: default
 	    <h3 class="h3_agenda">Pre YOG Events</h3>
 	    <ul>
 		<li>19-23.12.2018 : IBU Biathlon Junior Cup, Les Tuffes 
-		<div class="addeventatc calendrier">
-		    Add to Calendar
+		<div title="Add to Calendar" class="addeventatc calendrier">
 		    <span class="start">12/19/2018 08:00 AM</span>
 		    <span class="end">12/23/2018 20:00 AM</span>
 		    <span class="title">IBU Biathlon Junior Cup</span>
@@ -121,8 +120,7 @@ layout: default
 		</li>
 		<br>
 		<li>08-13.01.2019 : FIL Luge ITW, St-Moritz 
-		<div class="addeventatc calendrier">
-		    Add to Calendar
+		<div title="Add to Calendar" class="addeventatc calendrier">
 		    <span class="start">01/08/2019 08:00 AM</span>
 		    <span class="end">01/13/2019 20:00 AM</span>
 		    <span class="title">FIL Luge ITW</span>
@@ -131,8 +129,7 @@ layout: default
 		</li>
 		<br>
 		<li>11-13.01.2019 : Audi Skicross Tour & FIS Europa Cup, Villars 
-		<div class="addeventatc calendrier">
-		    Add to Calendar
+		<div title="Add to Calendar" class="addeventatc calendrier">
 		    <span class="start">01/11/2019 08:00 AM</span>
 		    <span class="end">01/13/2019 20:00 AM</span>
 		    <span class="title">Audi Skicross Tour & FIS Europa Cup</span>
@@ -141,8 +138,7 @@ layout: default
 		</li>
 		<br>
 		<li>14-19.01.2019 : FIL Luge Junior World Cup, St-Moritz 
-		<div class="addeventatc calendrier">
-		    Add to Calendar
+		<div title="Add to Calendar" class="addeventatc calendrier">
 		    <span class="start">01/14/2019 08:00 AM</span>
 		    <span class="end">01/19/2019 20:00 AM</span>
 		    <span class="title">FIL Luge Junior World Cup</span>
@@ -151,8 +147,7 @@ layout: default
 		</li>
 		<br>
 		<li>19-20.01.2019 : Speed Skating Swiss Championships, St-Moritz 
-		<div class="addeventatc calendrier">
-		    Add to Calendar
+		<div title="Add to Calendar" class="addeventatc calendrier">
 		    <span class="start">01/19/2019 08:00 AM</span>
 		    <span class="end">01/20/2019 20:00 AM</span>
 		    <span class="title">Speed Skating Swiss Championships</span>
@@ -161,8 +156,7 @@ layout: default
 		</li>
 		<br>
 		<li>19-20.01.2019 : Slopestyle Swiss-ski Freestyle Ski Tour & Audi Snowboard Tour, Leysin 
-		<div class="addeventatc calendrier">
-		    Add to Calendar
+		<div title="Add to Calendar" class="addeventatc calendrier">
 		    <span class="start">01/19/2019 08:00 AM</span>
 		    <span class="end">01/20/2019 20:00 AM</span>
 		    <span class="title">Slopestyle Swiss-ski Freestyle Ski Tour & Audi Snowboard Tour</span>
@@ -171,8 +165,7 @@ layout: default
 		</li>
 		<br>
 		<li>26.01.2019 : Journée officielle Pre YOG Event, Leysin 
-		<div class="addeventatc calendrier">
-		    Add to Calendar
+		<div title="Add to Calendar" class="addeventatc calendrier">
 		    <span class="start">01/26/2019 08:00 AM</span>
 		    <span class="end">01/26/2019 20:00 AM</span>
 		    <span class="title">Journée officielle Pre YOG Event</span>
@@ -181,8 +174,7 @@ layout: default
 		</li>
 		<br>
 		<li>21-27.01.2019 : IBSF World Cup, St-Moritz 
-		<div class="addeventatc calendrier">
-		    Add to Calendar
+		<div title="Add to Calendar" class="addeventatc calendrier">
 		    <span class="start">01/21/2019 08:00 AM</span>
 		    <span class="end">01/27/2019 20:00 AM</span>
 		    <span class="title">IBSF World Cup</span>
@@ -192,7 +184,6 @@ layout: default
 		<br>
 		<li>28-29.01.2019 : Alpine Skiing FIS Europa Cup (SG/SC), Les Diablerets 
 		<div class="addeventatc calendrier">
-		    Add to Calendar
 		    <span class="start">01/28/2019 08:00 AM</span>
 		    <span class="end">01/29/2019 20:00 AM</span>
 		    <span class="title">Alpine Skiing FIS Europa Cup (SG/SC)</span>
@@ -205,8 +196,7 @@ layout: default
 	    <h3 class="h3_agenda">Lausanne 2020 Events</h3>
 	    <ul>
 		<li>08.01.2019 : Lancement officiel de la mascotte L2020, Patinoire de Malley (LHC-HC Davos), 19h00-22h30 
-		<div class="addeventatc calendrier">
-		    Add to Calendar
+		<div title="Add to Calendar" class="addeventatc calendrier">
 		    <span class="start">01/08/2019 19:00 AM</span>
 		    <span class="end">01/08/2019 22:30 AM</span>
 		    <span class="title">Lancement officiel de la mascotte L2020</span>
@@ -215,8 +205,7 @@ layout: default
 		</li>
 		<br>
 		<li>09.01.2019 : One Year to Go, Quartier du Flon (Esplanade du Flon, Lausanne), 16h00-22h30 
-		<div class="addeventatc calendrier">
-		    Add to Calendar
+		<div title="Add to Calendar" class="addeventatc calendrier">
 		    <span class="start">01/09/2019 16:00 AM</span>
 		    <span class="end">01/09/2019 22:30 AM</span>
 		    <span class="title">One Year to Go</span>
