--- a/index.html
+++ b/index.html
@@ -95,16 +95,7 @@ layout: default
 	<div class="row">
 	    <h3 class="h3_agenda">Lausanne 2020 Events</h3>
 	    <ul>
-		<li>08.01.2019 : Lancement officiel de la mascotte L2020, Patinoire de Malley (LHC-HC Davos), 19h00-22h30 
-		<div title="Add to Calendar" class="addeventatc calendrier">
-		    <span class="start">01/08/2019 19:00 AM</span>
-		    <span class="end">01/08/2019 22:30 AM</span>
-		    <span class="title">Lancement officiel de la mascotte L2020</span>
-		    <span class="location">Patinoire de Malley</span>
-	    	</div>
-		</li>
-		<br>
-		<li>09.01.2019 : One Year to Go, Quartier du Flon (Esplanade du Flon, Lausanne), 16h00-22h30 
+		<li>09.01.2019 : <a href="/images/home/Lausanne2020_affiche_09.01.2019.pdf" target="_blank" rel="noopener">One Year to Go, Quartier du Flon (Esplanade du Flon, Lausanne), 16h00-22h30 
 		<div title="Add to Calendar" class="addeventatc calendrier">
 		    <span class="start">01/09/2019 16:00 AM</span>
 		    <span class="end">01/09/2019 22:30 AM</span>
