--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ layout: default
 	<div class="row">
 	    <h3 class="h3_agenda">Lausanne 2020 Events</h3>
 	    <ul>
-		<li>09.01.2019 : <a href="/images/home/Lausanne2020_affiche_09.01.2019.pdf" target="_blank" rel="noopener">One Year to Go, Quartier du Flon (Esplanade du Flon, Lausanne), 16h00-22h30 
+		<li>09.01.2019 : <a href="/images/home/Lausanne2020_affiche_09.01.2019.pdf" target="_blank" rel="noopener">One Year to Go</a>, Quartier du Flon (Esplanade du Flon, Lausanne), 16h00-22h30 
 		<div title="Add to Calendar" class="addeventatc calendrier">
 		    <span class="start">01/09/2019 16:00 AM</span>
 		    <span class="end">01/09/2019 22:30 AM</span>
