--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ layout: default
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_0fa74011acb0c15df90b53c26_5f3f817214" tabindex="-1" value=""></div>
     <div class="newsletter-form-button"><input type="submit" value="{{ document.fragments.newsletter_submit_button.text }}" name="subscribe" class="newsletter_cta_btn btn" style="font-size: 20px;"></div>
     </form>
-    <p>{{ document.fragments.newsletter_gdpr.text }}</p>
+    <p style="color: white;">{{ document.fragments.newsletter_gdpr.text }}</p>
 </div>
 <div class="cio-sponsors">
     <div class="container">
