--- a/news.html
+++ b/news.html
@@ -1,13 +1,10 @@
 ---
 layout: default
 ---
-
 {% capture nowyear %}{{ site.time | date: '%Y' }}{% endcapture %}
 {% assign news2017 = 0 %}
-{% assign news2018-1 = 0 %}
-{% assign news2018-2 = 0 %}
-{% assign news2019-1 = 0 %}
-{% assign news2019-2 = 0 %}
+{% assign news2018 = 0 %}
+{% assign news2019 = 0 %}
 {% assign news2020 = 0 %}
 {% for new in site.prismicData.collections.news %}
   {% capture newyear %}{{ new.fragments.publication_date.date | date: '%Y' }}{% endcapture %}
@@ -16,31 +13,24 @@ layout: default
     {% assign news2017 = news2017 | plus: 1 %}
   {% endif %}
   {% if newyear == '2018' %}
-    {% if news2018-1 > 80 %}
-      {% assign news2018-2 = news2018-2 | plus: 1 %}
-    {% else %}
-      {% assign news2018-1 = news2018-1 | plus: 1 %}
-    {% endif %}
+    {% assign news2018 = news2018 | plus: 1 %}
   {% endif %}
   {% if newyear == '2019' %}
-    {% if news2019-1 > 80 %}
-      {% assign news2019-2 = news2019-2 | plus: 1 %}
-    {% else %}
-      {% assign news2019-1 = news2019-1 | plus: 1 %}
-    {% endif %}
+    {% assign news2019 = news2019 | plus: 1 %}
   {% endif %}
   {% if newyear == '2020' %}
     {% assign news2020 = news2020 | plus: 1 %}
   {% endif %}
 {% endfor %}
+
 <div class="news-page">
   <div class="container">
     {% assign document = site.prismicData.single.page_home %} 
     <h1 class="h1_big_news h1_newsletter_cta">{{document.fragments.news_title.text}}</h1>
-      
+
     <div class="row">
       {% assign news = site.prismicData.collections.news | sort:'fragments.publication_date.date' | reverse  %}
-      {% for news_item in news limit:9 %}     
+      {% for news_item in news limit:9 %}    
         <div class="come-in-module col-sm-6 col-md-4">
            <a class="wrap_a" href="/{{ site.langShort }}/news/{{ news_item.slug }}">
               <div class="new col-md-12">
@@ -79,36 +69,22 @@ layout: default
         </br>
       {% if nowyear >= '2018' %}
         {% if news2018 > 9 %}
-          {% if news2018 > 15 %}
-            <a href="/{{ site.langShort }}/news-archives/2018-1">{{ site.prismicData.single.base.fragments.news_years_archives_title.text }} 2018 (1)</a>
-            <a href="/{{ site.langShort }}/news-archives/2018-2">{{ site.prismicData.single.base.fragments.news_years_archives_title.text }} 2018 (2)</a>
-          {% else %}
-            <a href="/{{ site.langShort }}/news-archives/2018">{{ site.prismicData.single.base.fragments.news_years_archives_title.text }} 2018</a>
-          {% endif %} 
+          <a href="/{{ site.langShort }}/news-archives/2018">{{ site.prismicData.single.base.fragments.news_years_archives_title.text }} 2018</a>
         {% endif %}
       {% endif %}
         </br>
       {% if nowyear >= '2019' %}
         {% if news2019 > 9 %}
-          {% if news2019 > 15 %}
-            <a href="/{{ site.langShort }}/news-archives/2019">{{ site.prismicData.single.base.fragments.news_years_archives_title.text }} 2019 (1)</a>
-            <a href="/{{ site.langShort }}/news-archives/2019">{{ site.prismicData.single.base.fragments.news_years_archives_title.text }} 2019 (2)</a>
-          {% else %}
-            <a href="/{{ site.langShort }}/news-archives/2019">{{ site.prismicData.single.base.fragments.news_years_archives_title.text }} 2019</a>
-          {% endif %} 
+          <a href="/{{ site.langShort }}/news-archives/2019">{{ site.prismicData.single.base.fragments.news_years_archives_title.text }} 2019</a>
         {% endif %}
       {% endif %}
         </br>
       {% if nowyear >= '2020' %}
         {% if news2020 > 9 %}
-          {% if news2020 > 90 %}
-            <a href="/{{ site.langShort }}/news-archives/2020">{{ site.prismicData.single.base.fragments.news_years_archives_title.text }} 2020 (1)</a>
-            <a href="/{{ site.langShort }}/news-archives/2020">{{ site.prismicData.single.base.fragments.news_years_archives_title.text }} 2020 (2)</a>
-          {% else %}
-            <a href="/{{ site.langShort }}/news-archives/2020">{{ site.prismicData.single.base.fragments.news_years_archives_title.text }} 2020</a>
-          {% endif %} 
+          <a href="/{{ site.langShort }}/news-archives/2020">{{ site.prismicData.single.base.fragments.news_years_archives_title.text }} 2020</a>
         {% endif %}
       {% endif %}
     </div>
     </div>
   </div>
+</div>
