--- a/archives-2017.html
+++ b/archives-2017.html
@@ -8,7 +8,7 @@ layout: default
       	{% assign newsinverted = site.prismicData.collections.news | sort:'fragments.publication_date.date' | reverse  %}
 	      {% for news in newsinverted %}
 	      	{% capture newyear %}{{ news.fragments.publication_date.date | date: '%Y' }}{% endcapture %}
-	      	{% if newyear <= 2017 %}
+	      	{% if newyear <= '2017' %}
 	        <div class="come-in-module col-sm-6 col-md-4">
            <a class="wrap_a" href="/{{ site.langShort }}/news/{{ news.slug }}">
               <div class="new col-md-12">
