--- a/archives-2018-1.html
+++ b/archives-2018-1.html
@@ -5,8 +5,8 @@ layout: default
   <div class="container">
     <h1 class="h1_big_news h1_newsletter_cta">{{ site.prismicData.single.base.fragments.news_years_archives_title.text }}</h1>
     <div class="row">
-      	{% assign newsinverted = site.prismicData.collections.news | sort:'fragments.publication_date.date' | reverse  %}
-	      {% for news in newsinverted %}
+      	{% assign newsordered = site.prismicData.collections.news | sort:'fragments.publication_date.date' %}
+	      {% for news in newsordered %}
 	      	{% capture newyear %}{{ news.fragments.publication_date.date | date: '%Y' }}{% endcapture %}
           {% capture newmonth %}{{ news.fragments.publication_date.date | date: '%n' }}{% endcapture %}
 	      	{% if newyear == '2018' %}
