--- a/about.html
+++ b/about.html
@@ -77,9 +77,13 @@ layout: default
     <h1>{{ about_data.singleevent }}</h1>
     <div class="singleevent_img">
         {% if site.lang == "fr-fr" %}
-          <img src="/images/about/L2020_Map_FR.png" width="60%">
+          <img src="/images/about/L2020_VMP_FR.png" width="60%">
+        {% elseif site.lang == "de-de" %}
+          <img src="/images/about/L2020_VMP_GE.png" width="60%">
+        {% elseif site.lang == "es-es" %}
+          <img src="/images/about/L2020_VMP_ES.png" width="60%">
         {% else %}
-          <img src="/images/about/L2020_Swiss_Map.png" width="60%">
+          <img src="/images/about/L2020_VMP_EN.png" width="60%">
         {% endif %}
     </div>
   </div>
