--- a/about.html
+++ b/about.html
@@ -78,9 +78,9 @@ layout: default
     <div class="singleevent_img">
         {% if site.lang == "fr-fr" %}
           <img src="/images/about/L2020_VMP_FR.png" width="60%">
-        {% else if site.lang == "de-de" %}
+        {% elsif site.lang == "de-de" %}
           <img src="/images/about/L2020_VMP_GE.png" width="60%">
-        {% else if site.lang == "es-es" %}
+        {% elsif site.lang == "es-es" %}
           <img src="/images/about/L2020_VMP_ES.png" width="60%">
         {% else %}
           <img src="/images/about/L2020_VMP_EN.png" width="60%">
