--- a/medias.html
+++ b/medias.html
@@ -78,6 +78,7 @@ layout: default
       <h2>Newsletter</h2>
       <div class="newsl">
         {% if site.lang == "fr-fr" %}
+          <a href="https://mailchi.mp/lausanne2020.com/newsletter-janvier-2019" target="_blank" rel="noopener"> Janvier 2019 </a><br>
           <a href="https://mailchi.mp/lausanne2020.com/newsletter-decembre-2-2018" target="_blank" rel="noopener"> Décembre 2018 </a><br>
           <a href="https://mailchi.mp/lausanne2020.com/newsletter-decembre-2018" target="_blank" rel="noopener"> Décembre 2018 </a><br>
           <a href="https://mailchi.mp/lausanne2020.com/newsletter-octobre-2018" target="_blank" rel="noopener"> Octobre 2018 </a><br>
@@ -92,6 +93,7 @@ layout: default
           <a href="https://mailchi.mp/d1078c26c261/lausanne-2020-newsletter-8-juin-2017" target="_blank" rel="noopener"> Juin 2017 </a><br>
         {% endif %}
         {% if site.lang == "de-de" %}
+          <a href="https://mailchi.mp/lausanne2020/newsletter-janvier-2019" target="_blank" rel="noopener"> Januar 2019 </a><br>
           <a href="https://mailchi.mp/lausanne2020/newsletter-dezember-2-2018" target="_blank" rel="noopener"> Dezember 2018 </a><br>
           <a href="https://mailchi.mp/lausanne2020/newsletter-dezember-2018" target="_blank" rel="noopener"> Dezember 2018 </a><br>
           <a href="https://mailchi.mp/lausanne2020/newsletter-oktober-2018-de" target="_blank" rel="noopener"> Oktober 2018 </a><br>
@@ -105,6 +107,7 @@ layout: default
           <a href="https://mailchi.mp/1b14eb75cf7e/lausanne-2020-newsletter-8-juni-2017" target="_blank" rel="noopener"> Juni 2017 </a><br>
         {% endif %}
         {% if site.lang == "en-gb" %}
+          <a href="https://mailchi.mp/lausanne2020.com/newsletter-december-2-2018" target="_blank" rel="noopener"> January 2019 </a><br>
           <a href="https://mailchi.mp/lausanne2020.com/newsletter-december-2-2018" target="_blank" rel="noopener"> December 2018 </a><br>
           <a href="https://mailchi.mp/lausanne2020.com/newsletter-december-2018" target="_blank" rel="noopener"> December 2018 </a><br>
           <a href="https://mailchi.mp/lausanne2020.com/newsletter-october-2018-en" target="_blank" rel="noopener"> October 2018 </a><br>
@@ -124,15 +127,15 @@ layout: default
       <div class="contactInfos">
         {% if site.lang == "fr-fr" %}
           <h2>Contact presse :</h2>
-          @ : <a href="mailto:press@lausanne2020.com?Subject=Press%20contact" >press(at)lausanne2020(dot)com</a>
+          @ : <a href="mailto:press@lausanne2020.sport?Subject=Press%20contact" >press(at)lausanne2020(dot)sport</a>
         {% endif %}
         {% if site.lang == "de-de" %}
           <h2>Medienkontakt</h2>
-          @ : <a href="mailto:press@lausanne2020.com?Subject=Press%20contact" >press(at)lausanne2020(dot)com</a>
+          @ : <a href="mailto:press@lausanne2020.sport?Subject=Press%20contact" >press(at)lausanne2020(dot)sport</a>
         {% endif %}
         {% if site.lang == "en-gb" %}
           <h2>Press contact</h2>
-          @ : <a href="mailto:press@lausanne2020.com?Subject=Press%20contact" >press(at)lausanne2020(dot)com</a>
+          @ : <a href="mailto:press@lausanne2020.sport?Subject=Press%20contact" >press(at)lausanne2020(dot)sport</a>
         {% endif %}
         
       </div>
