--- a/index.html
+++ b/index.html
@@ -123,6 +123,9 @@ layout: default
     <a class="socials_links" href="https://www.youtube.com/channel/UCcEgzQvjtLp7UCdsXfuHbyQ" target="_blank" rel="noopener">
 	<img height="45" style="margin-top: 30px;"  src="/images/home/yt-icon-white.png">
     </a>
+    <a class="socials_links" href="https://www.flickr.com/photos/lausanne2020/" target="_blank" rel="noopener">
+	<img height="45" style="margin-top: 30px;"  src="/images/home/flickr-wh.png">
+    </a>
 </div>
 <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
 <div class="newsletter_cta col-md-6 col-sm-12">
