--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ layout: default
 	<img height="45" style="margin-top: 30px; margin-right: 20px;"  src="/images/home/tw-icon-white.png">
     </a>
     <a class="socials_links" href="https://www.youtube.com/channel/UCcEgzQvjtLp7UCdsXfuHbyQ" target="_blank" rel="noopener">
-	<img height="45" style="margin-top: 30px;"  src="/images/home/yt-icon-white.png">
+	<img height="45" style="margin-top: 30px; margin-right: 20px;"  src="/images/home/yt-icon-white.png">
     </a>
     <a class="socials_links" href="https://www.flickr.com/photos/lausanne2020/" target="_blank" rel="noopener">
 	<img height="45" style="margin-top: 30px;"  src="/images/home/flickr-wh.png">
