--- a/index.html
+++ b/index.html
@@ -156,43 +156,69 @@ layout: default
         <img src="/images/cio-partners/logo_olympic.png" alt="olympic" class="come-in-module">
         <ul class="sponsors-list come-in-module">
             <li>
-                <img src="/images/cio-partners/Coca-Cola_logo_200.png" alt="Coca-Cola">
+                <a rel="noopener noreferrer" href="https://www.coca-cola.com/global/">
+		    <img src="/images/cio-partners/Coca-Cola_logo_200.png" alt="Coca-Cola">
+		</a>
             </li>
             <li>
-                <img src="/images/cio-partners/Alibaba_200.png" alt="Alibaba Group">
+                <a rel="noopener noreferrer" href="https://alibabagroup.com/en/global/home">
+		    <img src="/images/cio-partners/Alibaba_200.png" alt="Alibaba Group">
+		</a>
             </li>
             <li>
-                <img src="/images/cio-partners/Atos_logo_200.png" alt="Atos">
+                <a rel="noopener noreferrer" href="https://atos.net/en/">
+		    <img src="/images/cio-partners/Atos_logo_200.png" alt="Atos">
+		</a>
             </li>
             <li>
-                <img src="/images/cio-partners/Bridgestone_logo_200.png" alt="Bridgestone">
+                <a rel="noopener noreferrer" href="https://www.bridgestone.com/">
+		    <img src="/images/cio-partners/Bridgestone_logo_200.png" alt="Bridgestone">
+		</a>
             </li>
             <li>
-                <img src="/images/cio-partners/Dow_logo_200.png" alt="Dow">
+                <a rel="noopener noreferrer" href="https://www.dow.com/en-us">
+		    <img src="/images/cio-partners/Dow_logo_200.png" alt="Dow">
+		</a>
             </li>
             <li>
-                <img src="/images/cio-partners/GE_logo_200.png" alt="GE">
+                <a rel="noopener noreferrer" href="https://www.ge.com/">
+		    <img src="/images/cio-partners/GE_logo_200.png" alt="GE">
+		</a>
             </li>
             <li>
-                <img src="/images/cio-partners/Intel_logo_200.png" alt="Intel">
+                <a rel="noopener noreferrer" href="https://www.intel.com/content/www/us/en/homepage.html">
+		    <img src="/images/cio-partners/Intel_logo_200.png" alt="Intel">
+		</a>
             </li>
             <li>
-                <img src="/images/cio-partners/Omega_logo_200.png" alt="Omega">
+                <a rel="noopener noreferrer" href="https://www.omegawatches.com/">
+		    <img src="/images/cio-partners/Omega_logo_200.png" alt="Omega">
+		</a>
             </li>
             <li>
-                <img src="/images/cio-partners/Panasonic_logo_200.png" alt="Panasonic">
+                <a rel="noopener noreferrer" href="https://www.panasonic.com/">
+		    <img src="/images/cio-partners/Panasonic_logo_200.png" alt="Panasonic">
+		</a>
             </li>
             <li>
-                <img src="/images/cio-partners/PG_logo_200.png" alt="PG">
+                <a rel="noopener noreferrer" href="https://us.pg.com/">
+		    <img src="/images/cio-partners/PG_logo_200.png" alt="PG">
+		</a>
             </li>
             <li> 
-                <img src="/images/cio-partners/Samsung_200.png" alt="Samsung">
+                <a rel="noopener noreferrer" href="https://www.samsung.com/">
+		    <img src="/images/cio-partners/Samsung_200.png" alt="Samsung">
+		</a>
             </li>
             <li>
-                <img src="/images/cio-partners/Toyota_logo_200.png" alt="Toyota">
+                <a rel="noopener noreferrer" href="https://fr.toyota.ch/">
+		    <img src="/images/cio-partners/Toyota_logo_200.png" alt="Toyota">
+		</a>
             </li>
             <li>
-                <img src="/images/cio-partners/Visa_logo_200.png" alt="Visa">
+                <a rel="noopener noreferrer" href="https://usa.visa.com/about-visa.html">
+		    <img src="/images/cio-partners/Visa_logo_200.png" alt="Visa">
+		</a>
             </li>
         </ul>
 	<h4 class="partners-title">OFFICIAL PARTNERS</h4>
@@ -200,13 +226,19 @@ layout: default
 	<hr style="border-top: 1px solid #fff;">
 	<ul class="sponsors-list come-in-module">
             <li>
-                <img src="/images/cio-partners/Retraite_Populaire.png" alt="Retraites Populaires">
+                <a rel="noopener noreferrer" href="https://www.retraitespopulaires.ch/">
+		    <img src="/images/cio-partners/Retraite_Populaire.png" alt="Retraites Populaires">
+		</a>
             </li>
 	    <li>
-                <img src="/images/cio-partners/Swisscom.png" alt="Swisscom">
+                <a rel="noopener noreferrer" href="https://www.swisscom.ch/fr/clients-prives.html">
+		    <img src="/images/cio-partners/Swisscom.png" alt="Swisscom">
+		</a>
             </li>
             <li>
-                <img src="/images/cio-partners/ECA.png" alt="ECA">
+                <a rel="noopener noreferrer" href="https://www.eca-vaud.ch/">
+		    <img src="/images/cio-partners/ECA.png" alt="ECA">
+		</a>
             </li>
 	</ul>
 	<h4 class="partners-title">OFFICIAL PROVIDERS</h4>
@@ -214,13 +246,19 @@ layout: default
 	<hr style="border-top: 1px solid #fff;">
 	<ul class="sponsors-list come-in-module">
             <li>
-                <img src="/images/cio-partners/Loyco.png" alt="Loyco">
+                <a rel="noopener noreferrer" href="https://www.loyco.ch/">
+		    <img src="/images/cio-partners/Loyco.png" alt="Loyco">
+		</a>
             </li>
             <li>
-                <img src="/images/cio-partners/DB_Schenker.png" alt="DB Schenker">
+                <a rel="noopener noreferrer" href="https://www.dbschenker.com/ch-en">
+		    <img src="/images/cio-partners/DB_Schenker.png" alt="DB Schenker">
+		</a>
             </li>	
             <li>
-                <img src="/images/cio-partners/Quartier_Du_Flon.png" alt="Quartier du Flon">
+                <a rel="noopener noreferrer" href="https://flon.ch/fr/">
+		    <img src="/images/cio-partners/Quartier_Du_Flon.png" alt="Quartier du Flon">
+		</a>
             </li>
         </ul>
 	<h4 class="partners-title">INSTITUTIONAL SUPPORT</h4>
@@ -228,19 +266,29 @@ layout: default
 	<hr style="border-top: 1px solid #fff;">
 	<ul class="sponsors-list come-in-module">
             <li>
-                <img src="/images/cio-partners/Ville_Lausanne.png" alt="Ville de Lausanne">
+                <a rel="noopener noreferrer" href="http://www.lausanne.ch/fr/">
+		    <img src="/images/cio-partners/Ville_Lausanne.png" alt="Ville de Lausanne">
+		</a>
             </li>
             <li>
-                <img src="/images/cio-partners/Swiss_Olympic.png" alt="Swiss Olympic">
+                <a rel="noopener noreferrer" href="https://www.swissolympic.ch/fr/">
+		    <img src="/images/cio-partners/Swiss_Olympic.png" alt="Swiss Olympic">
+		</a>
             </li>
             <li>
-                <img src="/images/cio-partners/Canton_Vaud.png" alt="Canton de Vaud">
+                <a rel="noopener noreferrer" href="https://www.vd.ch/">
+		    <img src="/images/cio-partners/Canton_Vaud.png" alt="Canton de Vaud">
+		</a>
             </li>
             <li>
-                <img src="/images/cio-partners/Confederation_Suisse.png" alt="Confédération Suisse">
+                <a rel="noopener noreferrer" href="https://www.baspo.admin.ch/fr/home.html">
+		    <img src="/images/cio-partners/Confederation_Suisse.png" alt="Confédération Suisse">
+		</a>
             </li>
             <li>
-                <img src="/images/cio-partners/Fond_Du_Sport_Vaudois.png" alt="Fond du Sport Vaudois">
+                <a rel="noopener noreferrer" href="http://www.fondsdusportvaudois.ch/">
+		    <img src="/images/cio-partners/Fond_Du_Sport_Vaudois.png" alt="Fond du Sport Vaudois">
+		</a>
             </li>
         </ul>
 	<h4 class="partners-title">INSTITUTIONAL PARTNERS</h4>
@@ -248,31 +296,49 @@ layout: default
 	<hr style="border-top: 1px solid #fff;">
 	<ul class="sponsors-list come-in-module">
             <li>
-                <img src="/images/cio-partners/Eracom.png" alt="Eracom">
+                <a rel="noopener noreferrer" href="https://eracom.ch/">
+		    <img src="/images/cio-partners/Eracom.png" alt="Eracom">
+		</a>
             </li>
             <li>
-                <img src="/images/cio-partners/EDC.png" alt="EDC">
+                <a rel="noopener noreferrer" href="https://www.ecole-construction.ch/">
+		    <img src="/images/cio-partners/EDC.png" alt="EDC">
+		</a>
             </li>
             <li>
-                <img src="/images/cio-partners/Ecal.png" alt="Ecal">
+                <a rel="noopener noreferrer" href="https://www.ecal.ch/fr/100/homepage">
+		    <img src="/images/cio-partners/Ecal.png" alt="Ecal">
+		</a>
             </li>
             <li>
-                <img src="/images/cio-partners/EHL.png" alt="EHL">
+                <a rel="noopener noreferrer" href="https://www.ehl.edu/fr">
+		    <img src="/images/cio-partners/EHL.png" alt="EHL">
+		</a>
             </li>
             <li>
-                <img src="/images/cio-partners/EPFL.png" alt="EPFL">
+                <a rel="noopener noreferrer" href="https://www.epfl.ch/">
+		    <img src="/images/cio-partners/EPFL.png" alt="EPFL">
+		</a>
             </li>
             <li>
-                <img src="/images/cio-partners/HEMU.png" alt="HEMU">
+                <a rel="noopener noreferrer" href="https://www.hemu.ch/accueil/">
+		    <img src="/images/cio-partners/HEMU.png" alt="HEMU">
+		</a>
             </li>
 	    <li>
-                <img src="/images/cio-partners/CHUV.png" alt="CHUV">
+                <a rel="noopener noreferrer" href="https://www.chuv.ch/fr/chuv-home/">
+		    <img src="/images/cio-partners/CHUV.png" alt="CHUV">
+		</a>
             </li>
             <li>
-                <img src="/images/cio-partners/UNIL.png" alt="UNIL">
+                <a rel="noopener noreferrer" href="http://www.unil.ch/index.html">
+		    <img src="/images/cio-partners/UNIL.png" alt="UNIL">
+		</a>
             </li>
             <li>
-                <img src="/images/cio-partners/HEIG-VD.png" alt="HEIG-VD">
+                <a rel="noopener noreferrer" href="https://heig-vd.ch/">
+		    <img src="/images/cio-partners/HEIG-VD.png" alt="HEIG-VD">
+		</a>
             </li>
         </ul>
     </div>
